[package]
name = "hoppinworld-backend"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
diesel = { version = "1.3.3", features = ["mysql","r2d2","chrono"] }
dotenv = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_contrib = "0.3.13"
rocket_cors = "0.2.3"
uuid = { version = "0.6.5", features = ["v4"] }
log = "0.4.3"
interpolate_idents = "0.2.5"
bcrypt = "0.2.0"
chrono = "0.4.4"
backend_utils = { git = "https://github.com/jojolepro/backend-utils-rs" }