[package]
name = "hoppinworld-backend"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4", features = ["tls"] }
rocket_codegen = "0.4"
diesel = { version = "1.3.3", features = ["mysql","r2d2","chrono"] }
dotenv = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_contrib = "0.4.0"
rocket_cors = "0.4.0"
uuid = { version = "0.7.1", features = ["v4"] }
log = "0.4.3"
interpolate_idents = "0.2.5"
bcrypt = "0.2.0"
chrono = "0.4.4"
backend_utils = { git = "https://github.com/jojolepro/backend-utils-rs" }
lettre = { git = "https://github.com/lettre/lettre", rev = "c988b1760ad8179d9e7f3fb8594d2b86cf2a0a49" }
lettre_email = { git = "https://github.com/lettre/lettre", rev = "c988b1760ad8179d9e7f3fb8594d2b86cf2a0a49" }
validator = "0.8.0"
validator_derive = "0.8.0"
recaptcha = "0.3.1"
fern = "0.5"
mailgun_v3 = "0.5.0"
